syntax = "proto3";

package feedback;

service Feedback {
    rpc Add(AddRequest) returns (AddResponse) {}
    rpc GetRecords(GetRequest) returns (RecordsResponse) {}
}

message GetRequest {
    int64 uid = 1;
    int64 seq = 2;
    int64 num = 3;
}

message RecordsResponse {
    repeated Info infos = 1;
}

message Info {
    int64 id = 1;
    int64 uid = 2;
    string title = 3;
    string content = 4;
}

message AddRequest {
    Info info = 1;
}

message AddResponse {
    int64 id = 1;
}
